# advent-of-code-2024

./: LICENSE  aoc2024.cabal
day-1/: Main.hs
day-2/: Main.hs
day-3/: Main.hs
lib/: Aoc.hs
